# dx11startingproject

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  DX11Playground.sln  DX11Playground.vcxproj  DX11Playground.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dx11engine.vcxproj  dx11engine.vcxproj.filters  main.cpp
include/: Vertex.h
src/: main.cpp
